0032740: Coding Rules, OpenGl_Context.cxx - new warning on macOS after integration fix for #32732